--- a/test-client/test-client.yaml
+++ b/test-client/test-client.yaml
@@ -3,3 +3,6 @@ global:
   header: Welcome
   app-type: qdd
   bu-id: UNSET
+
+business-unit:
+  code: '${business-unit.bu-code}${business-unit.country-code}'  
