--- a/test-client/test-client-prod.yml
+++ b/test-client/test-client-prod.yml
@@ -1,2 +1,6 @@
 global:
   motd: NO MESSAGE ON PRODUCTION ENVIRONMENT !!!
+
+app:
+  mongodb:
+    server: mongodb://root:root@mongodb.atlas:27017  
