--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
   print-info-version:
     runs-on: linux
     steps:
-      - name: checkout version.txt
+      - name: checkout
         uses: actions/checkout@v2
       - name: Read file content
         id: version
@@ -15,4 +15,3 @@ jobs:
           echo "::set-output name=versionInfo::${content:1}"
       - name: Print file content
         run: echo "Deploying new version ${{ steps.version.outputs.versionInfo }}"
-
