--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -15,7 +15,10 @@ on:
           - 'pre-production'
           - 'production'
 jobs:
+  start-up:
+
   print-info-version:
+    needs: start-up
     runs-on: linux
     steps:
       - name: checkout
@@ -27,3 +30,5 @@ jobs:
           echo "::set-output name=versionInfo::${content:1}"
       - name: Print file content
         run: echo "Deploying new version ${{ steps.version.outputs.versionInfo }} on ${{ github.event.inputs.environment }} in ${{ github.event.inputs.logLevel }}"
+  clean-up:
+    needs: print-info-version
