--- a/.github/actions/main.yaml
+++ b/.github/actions/main.yaml
@@ -1,17 +1,12 @@
+name: "Display info"
 on:
-  create:
-    tags:
-      - 'p*'
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
 jobs:
   print-info-version:
     runs-on: linux
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: Read file content
-        id: version
-        run: |
-          content=`cat ./version.txt`
-          echo "::set-output name=versionInfo::${content:1}"
-      - name: Print file content
-        run: echo "Deploying new version ${{ steps.version.outputs.versionInfo }}"
+      - run: echo "Deploying new version ${{ github.event.inputs.version }}"
