--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,6 +19,9 @@ jobs:
     runs-on: linux
     steps:
       - run: echo "Start-up"
+      - uses: ../actions/main/print-info-version@v1
+        with:
+          version: ${{ github.event.inputs.sVersion }}
   print-info-version:
     needs: start-up
     runs-on: linux
