--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,6 +19,7 @@ jobs:
     runs-on: linux
     steps:
       - run: echo "Start-up"
+      - uses: actions/checkout@v2
       - uses: ../actions/main.yaml@v1
         with:
           version: ${{ github.event.inputs.sVersion }}
