--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - run: echo "Start-up"
       - uses: actions/checkout@v2
-      - uses: .github/workflows/reuse.yaml
+      - uses: actions/startup@main
         with:
           version: ${{ github.event.inputs.sVersion }}
   print-info-version:
